# AegisAgent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/new-adr/: SKILL.md
.github/workflows/: ci.yml
control-plane/: README.md
control-plane/feishu-gateway/: main.py
control-plane/router/: audit.py  auth.py  main.py  manager.py  orchestrator.py
control-plane/skill-vault/: db.py  main.py
docs/: CONTRIBUTING.md  PROPOSAL.md  ROADMAP.md  SETUP-GUIDE.md
docs/adr/: 0001-why-hermes.md
docs/superpowers/plans/: 2026-05-09-phase1.md
docs/superpowers/specs/: 2026-05-09-phase1-design.md
scripts/: start-phase0.sh  start-phase1.sh
tests/feishu_gateway/: test_gateway.py
tests/router/: test_audit.py  test_auth.py  test_manager.py  test_orchestrator.py
tests/skill_vault/: test_db.py
