# 项目依赖与工具统一配置 / Unified project dependencies and tool configuration

[project]
name = "aegisagent"
version = "0.1.0"
description = "Multi-tenant compliance-first AI agent platform"
requires-python = ">=3.12"
# 运行时依赖：两个服务共用，httpx 仅 router 需要但体积小，统一管理更简单
# Runtime deps: shared by both services; httpx is router-only but small enough to include here
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
# 开发依赖：只在本地开发和 CI 中安装，不进入生产环境
# Dev dependencies: installed locally and in CI only, not in production
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.9.0",
    "ruff>=0.4.10",
    "pre-commit>=3.7.0",
]

# ── ruff 代码风格检查配置 / ruff lint and format config ───────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["control-plane", "tests"]
exclude = [".git", ".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
# E/W = pycodestyle 基础规范 / basic style
# F   = pyflakes 逻辑错误 / logic errors
# I   = isort 导入排序 / import sorting
# UP  = pyupgrade 语法现代化 / modernize syntax
# B   = bugbear 常见 bug 模式 / common bug patterns
# N   = pep8-naming 命名规范 / naming conventions
select = ["E", "W", "F", "I", "UP", "B", "N"]
ignore = [
    "E501",  # 行长由 ruff format 控制 / line length handled by formatter
    "B008",  # FastAPI Depends() 需要在默认参数里调用函数 / FastAPI Depends() in defaults
]

[tool.ruff.lint.isort]
known-first-party = ["main", "manager", "db"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy 类型检查配置 / mypy type check config ────────────────────────────────

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true

# ── pytest 配置 / pytest config ───────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"
